--- a/page/css/base.css
+++ b/page/css/base.css
@@ -79,6 +79,26 @@ body {
     background: white;
 }
 
+.content {
+    display: inline-block;
+    position: relative;
+    width: 1170px;
+    margin: 30px auto 0px auto;
+}
+
+.content_left {
+    float: left;
+    width: 66%;
+    padding: 0px 20px 0px 0px;
+    box-sizing: border-box;
+
+}
+
+.content_right {
+    float: right;
+    width: 34%;
+    padding: 0px 0px 0px 0px;
+}
 
 
 
