--- a/page/css/base.css
+++ b/page/css/base.css
@@ -100,5 +100,104 @@ body {
     padding: 0px 0px 0px 0px;
 }
 
+.right_module {
+    display: inline-block;
+    width: 100%;
+    background: #1f1f1f;
+    color: white;
+    border-radius: 10px;
+    text-align: left;
+    padding: 0px 15px 25px 15px;
+    margin-bottom: 20px;
+}
 
+.right_module div {
+    display: block;
+    text-align: left;
+    font-size: 14px;
+    padding: 15px 5px 15px 0px;
+    color: dodgerblue;
+}
 
+.right_module a {
+    display: inline-block;
+    font-size: 14px;
+    color: dodgerblue;
+    margin-right: 5px;
+}
+
+.right_module ul li {
+    list-style: none;
+    color: white;
+    padding: 8px 0px;
+    border-bottom: 1px solid #292929;
+
+}
+
+.right_module ul li a {
+    text-decoration: none;
+    font-size: 14px;
+    color: white;
+}
+
+.right_module ul li div {
+    padding: 5px 0px;
+
+}
+
+.right_module ul li div span {
+    font-size: 14px;
+    color: white;
+}
+
+.right_module ul li p {
+    font-size: 14px;
+    color: #777;
+}
+
+.pull_right {
+    position: absolute;
+    right: 15px;
+}
+
+.right_module > span {
+    display: inline-block;
+    width: 50%;
+    height: 30px;
+    margin-top: 10px;
+}
+.right_module span a {
+    color: white;
+    font-size: 14px;
+    line-height: 30px;
+}
+
+.footer {
+    width: 100%;
+    height: 60px;
+    background: #191918;
+    text-align: center;
+    padding: 20px;
+}
+
+.footer ul {
+    display: inline-block;
+    margin: 0px auto;
+    text-align: center;
+}
+
+.footer ul li {
+    display: inline-block;
+    color: #a2a2a2;
+    float: left;
+    font-size: 14px;
+    margin-left: 10px;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.footer p {
+    margin-top: 10px;
+    color: #a2a2a2;
+}
