--- a/page/css/base.css
+++ b/page/css/base.css
@@ -201,3 +201,33 @@ body {
     margin-top: 10px;
     color: #a2a2a2;
 }
+
+.page_tool{
+    margin: 20px;
+    display: inline-block;
+}
+
+.page_tool ul li {
+    display: inline-block;
+    list-style: none;
+    width: 40px;
+    height: 30px;
+    background: white;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid black;
+    float: left;
+    cursor: pointer;
+}
+
+.page_tool ul li:hover{
+    background: gray;
+}
+
+.now_page {
+    background: #333!important;
+    color: #fff!important;
+}
+
+
+
